# rust-traq

./: .gitignore  .openapi-generator-ignore  CHANGELOG.md  Cargo.toml  Cargo.toml.template  README.md  generate.sh  rust-toolchain.toml
.github/workflows/: regenerate.yml  release.yml  rust.yml
.openapi-generator/: FILES
docs/: BotApi.md  ChannelApi.md  GetClient200Response.md  GroupApi.md  MeApi.md  OAuth2Client.md  OAuth2ClientDetail.md  Oauth2Api.md  OgpApi.md  OidcTraqUserInfo.md  OidcUserInfo.md  PatchBotRequest.md  PatchClientRequest.md  PostClientRequest.md  README.md  Session.md  StampApi.md  StampWithThumbnail.md  UnreadChannel.md  UserApi.md  WebhookApi.md
src/apis/: activity_api.rs  authentication_api.rs  bot_api.rs  channel_api.rs  clip_api.rs  configuration.rs  file_api.rs  group_api.rs  me_api.rs  message_api.rs  mod.rs  notification_api.rs  oauth2_api.rs  ogp_api.rs  pin_api.rs  public_api.rs  stamp_api.rs  star_api.rs  user_api.rs  user_tag_api.rs  webhook_api.rs  webrtc_api.rs
src/models/: active_o_auth2_token.rs  activity_timeline_message.rs  bot.rs  bot_detail.rs  bot_event_log.rs  bot_event_result.rs  bot_mode.rs  bot_state.rs  bot_tokens.rs  bot_user.rs  channel.rs  channel_event.rs  channel_event_detail.rs  channel_list.rs  channel_stats.rs  channel_stats_stamp.rs  channel_stats_user.rs  channel_subscribe_level.rs  channel_topic.rs  channel_view_state.rs  channel_viewer.rs  child_created_event.rs  clip_folder.rs  clipped_message.rs  dm_channel.rs  external_provider_user.rs  file_info.rs  file_info_thumbnail.rs  get_bot_200_response.rs  mod.rs  (+96 more)
