[package]
name = "traq"
version = "0.1.0"
authors = ["OpenAPI Generator team and contributors", "H1rono"]
description = "⚠️ Community Driven ⚠️ traQ v3 API"
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/traPtitech/rust-traq"
documentation = "https://github.com/traPtitech/rust-traq/tree/main/docs"
keywords = ["traq", "openapi"]
edition = "2021"

[dependencies]
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
url = "^2.2"
uuid = { version = "^1.0", features = ["serde"] }
[dependencies.reqwest]
version = "^0.11"
features = ["json", "multipart"]
